examples/test/testpolicy18476.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18476
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key12: value18
      key5: value12
      key36: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value43
          key2: value40
      podSelector:
        matchLabels:
          key5: value20
